test(api): Improve test coverage